# Photo-Editor-polish-anything

./: README.md  settings.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: background.json  filter.json  lightfx.json  sticker.json
app/src/main/cpp/: CMakeLists.txt
app/src/main/res/: box12.xml
app/src/main/res/color/: selector_nav_item_color.xml
app/src/main/res/drawable/: aa.xml  back.xml  bag.xml  blue_border.xml  blur_background.xml  border.xml  box1.xml  box10.xml  box11.xml  box12.xml  box13.xml  box14.xml  box2.xml  box3.xml  box4.xml  box5.xml  box6.xml  box7.xml  box8.xml  box9.xml  circular_progress.xml  collage_1.xml  collage_10.xml  collage_11.xml  collage_2.xml  collage_3.xml  collage_4.xml  collage_5.xml  collage__2_.xml  crops.xml  custom_background.xml  custom_beautify_seekbar.xml  custom_progress.xml  custom_radio_button.xml  custom_seekbar.xml  custom_seekbar_adjust.xml  custom_seekbars.xml  custom_thumb.xml  delete_remove.xml  dialog_background.xml  (+37 more)
app/src/main/res/layout/: activity_adjust.xml  activity_background.xml  activity_beautify.xml  activity_crop.xml  activity_dashboard.xml  activity_directory_picker.xml  activity_draw.xml  activity_edit.xml  activity_export.xml  activity_face.xml  activity_layout.xml  activity_makeup.xml  activity_polish_pro_payment.xml  activity_reshape.xml  activity_retouch.xml  activity_settings.xml  activity_splash_screen.xml  activity_sticker.xml  activity_store.xml  activity_store_sticker_displaying.xml  album_item.xml  (+145 more)
app/src/main/rs/: Sharpen.rs
gradle/wrapper/: gradle-wrapper.properties
(+233 files in other folders)
